# topaz

./: .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/components/: Editor.svelte  Help.svelte  Settings.svelte  StatusBar.svelte  TitleBar.svelte
src/lib/editor/: preview.ts  theme.ts
src/lib/styles/: editor.css  help.css  settings.css  statusbar.css  titlebar.css
src/styles/: global.css
