[package]
name = "topaz"
version = "0.1.0"
description = "The Text Editor"
authors = ["rxxuzi"]
license = "MIT"
repository = "https://github.com/rxxuzi/topaz"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-maximize", "window-unmaximize", "window-start-dragging", "window-unminimize", "window-show", "window-hide", "window-minimize", "window-close", "shell-open", "dialog-all", "fs-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
